# cross-check

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.backend  LICENSE  Makefile  README.md  SECURITY.md  agents.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml  security.yml
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/__tests__/security/: email-domain.test.ts
frontend/components/: ClerkAuthProvider.tsx  DataUsageNotice.tsx  FileList.tsx  Layout.js  Layout.tsx  MarkdownViewModal.tsx  PrototypePasswordModal.tsx  SessionBanner.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: usePolling.ts
frontend/lib/: email-domain.ts  filename.ts
frontend/pages/: _app.js  _app.tsx  _document.tsx  access-denied.tsx  analyse.tsx  index.js  index.tsx  issues.tsx  upload.tsx
frontend/pages/analyse/: completeness.tsx  compliance.tsx  inconsistencies.tsx
frontend/pages/sign-in/: [[...sign-in]].tsx
frontend/pages/sign-up/: [[...sign-up]].tsx
frontend/styles/: globals.scss
frontend/types/: govuk-frontend.d.ts
guidelines/: govuk-content-guidelines-simplified.md
notebooks/analysis/: main_analysis.ipynb
notebooks/exploratory/: 01_initial_exploration.ipynb
src/cross_check/: __init__.py  analysis.py  main.py  run_pipeline.py
src/cross_check/example_modules/: example_module.py
tests/: test_example_module.py  test_security.py
