[project]
name = "cross_check"
version = "0.0.1"
description = "Automatically recommend improvements to a large collection of written content (e.g. a website or intranet) to improve its consistency, clarity, compliance and completeness. Save hours or days compared to a manual content audit."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    {name = "Chris Hyland"},
]

license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "markitdown>=0.0.1a2",
    "filetype>=1.2.0",
    "pathvalidate>=3.2.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.2",
    "ty>=0.0.32",
    "pytest",
    "itables",
    "pip-audit",
    "pipask",
    "jupyter",
    "ipykernel",
]
