[project]
name = "cross_check"
version = "0.0.1"
description = "Automatically recommend improvements to a large collection of written content (e.g. a website or intranet) to improve its consistency, clarity, compliance and completeness. Save hours or days compared to a manual content audit."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    {name = "Chris Hyland"},
]

license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "markitdown>=0.0.1a2",
    "filetype>=1.2.0",
    "pathvalidate>=3.2.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.2.2",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.1",
    "pyjwt[crypto]>=2.9.0",
    "bertopic>=0.16.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.0.0",
    "arize-phoenix>=4.0.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "openinference-instrumentation-openai>=0.1.45",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ty.environment]
extra-paths = ["src"]

[tool.deptry.package_module_name_map]
"python-dotenv" = "dotenv"
"pyjwt" = "jwt"
"arize-phoenix" = "phoenix"
"scikit-learn" = "sklearn"

[tool.deptry.per_rule_ignores]
# Runtime deps used by FastAPI/uvicorn/phoenix — never imported directly
DEP002 = [
    "uvicorn",
    "python-multipart",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "openinference-instrumentation-openai",
]

[tool.bandit]
targets = ["src"]
skips = ["B101"]  # assert statements are acceptable in non-test code here

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.2",
    "ty>=0.0.32",
    "pytest",
    "pip-audit",
    "pytest-asyncio>=1.3.0",
]
